--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body bgcolor="BurlyWood">
 	<center><h1><center>Biodata</center></h1></center>
 	<center>
-<img src="Foto Kamalia.jpg" alt="Foto Kamalia" width="250" height="300">
+<img src="Foto Kamalia.jpg" alt="Foto Kamalia" width="300" height="300">
 <style>
 	table, th, td {
 		border: 1px solid black;
@@ -17,10 +17,11 @@
 	}
 	#t01 {
 		width: 100%;
-		background-color: #FFF0F5;
+		background-color: PeachPuff ;
 	}
 </style>
 <table style="100%">
+<table id="t01">
 	<tr>
 		<th>Nama :</th>
 		<th>Kamalia Soimah</th>
