--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Pembelajaran Jarak Jauh selama Pandemi Covid-19</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body bgcolor="BurlyWood">
 	<center><h1><center>Biodata</center></h1></center>
