--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="#mystory">My Story</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="fotogaleri.html #gallery">Gallery</a>
+              <a class="nav-link" href="fotogaleri.html">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
