--- a/fotogaleri.html
+++ b/fotogaleri.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="index.html #mystory">My Story</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#gallery">Gallery</a>
+              <a class="nav-link" href="index.html #gallery">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="index.html #contact">Contact</a>
