--- a/fotogaleri.html
+++ b/fotogaleri.html
@@ -24,19 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index.html #about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index.html #mystory">My Story</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#gallery">Gallery</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index.html #contact">Contact</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
           </ul>
         </div>
